# wta-optimization

./: .gitignore  README.md  benchmark.py  compare_andersen.py  compare_bpc.py  demo_oa.py  pyproject.toml  run_all_benchmark.sh
.github/workflows/: format-and-sort.yml
notebooks/: benchmark_notebook.ipynb
notebooks/results/: benchmark_results.csv  sensitivity_analysis.csv  tradeoff_curve.csv  warm_start_study.csv
results/: benchmark_andersen.csv  benchmark_andersen_v2.csv  benchmark_bertsimas.csv  benchmark_results.csv  benchmark_results_from_files.csv  bna_vs_bnav2_summary.csv  comparison_andersen.csv  comparison_bpc_vs_oa.csv  final_benchmark_andersen_rerun.csv  final_benchmark_andersen_v2_rerun.csv  make_report_figures.py  results.zipp  sensitivity_analysis.csv  tradeoff_curve.csv  tradeoff_curve_from_files.csv  warm_start_study.csv
results/report_figures/: 07_objective_gap_comparison_table.csv  07_objective_gap_comparison_table.tex  comparison_merged.csv  objective_quality_comparison.csv  summary.txt
src/wta_optimization/: __init__.py  bna_common.py  data.py  exact.py  exact_v2.py  heuristic.py  models.py
