[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wta-optimization"
version = "0.1.0"
description = "Exact and heuristic approaches for the Static Weapon Target Allocation problem"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pulp",
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
