[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wta-optimization"
version = "0.1.0"
description = "Exact and heuristic approaches for the Static Weapon Target Allocation problem"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pulp",
    "numpy",
    "pandas>=2.3.3",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "pyscipopt>=6.2.1",
    "gurobipy>=13.0.2",
    "scipy>=1.15.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
